# XenoCipher_Healthcare_IoT

server/: CMakeLists.txt  QUICK_START.md  SETUP_GUIDE.md  download_crow.ps1  main.cpp  setup_dependencies.ps1
server/include/: crow.h
src/: main.cpp
test/: lfsr_visualization.py  ntru_visualisation.py  transposition_visualization.py
